# hornets

./: .gitignore  README.md
annotation/: ruche01_frelon01.json
datasets/ban/: data.yaml  notes.json
datasets/ban/labels/: train.cache  val.cache
datasets/ban/labels/train/: 001bab63-frame607.txt  006d22de-frame146.txt  0098d4de-frame60.txt  043609e2-frame233.txt  043944a9-frame406.txt  04728dff-frame264.txt  052c1060-frame28.txt  057ee4b6-frame43.txt  059b7769-frame1426.txt  05c38fb7-frame155.txt  0642c6d1-frame682.txt  068f2bcc-frame461.txt  06cd979a-frame465.txt  06e4d730-frame600.txt  07a7a3f5-frame359.txt  087a74bd-frame698.txt  08f5f834-frame543.txt  0eba035d-frame49.txt  0f75f44a-frame828.txt  10091558-frame457.txt  10192405-frame1424.txt  10a5ea45-frame1057.txt  10bddebf-frame367.txt  111c3d90-frame122.txt  12cbdcab-frame310.txt  13f05f36-frame220.txt  147fe297-frame552.txt  1497fdd4-frame42.txt  15c9102a-frame149.txt  16055697-frame620.txt  16308cfb-frame142.txt  163fc98e-frame185.txt  16f791eb-frame323.txt  185dbc04-frame720.txt  18a82e3a-frame232.txt  18b43f24-frame395.txt  18bbcbd8-frame707.txt  19596ee1-frame84.txt  195bd072-frame599.txt  19ef136b-frame295.txt  (+534 more)
datasets/ban/labels/val/: 000b05d8-frame104.txt  0a2a5997-frame105.txt  0a794f19-frame297.txt  0a85c890-frame691.txt  0b4062fa-frame259.txt  0c0733ad-frame39.txt  0c0b645a-frame642.txt  0cc71fb8-frame386.txt  0d2595a4-frame230.txt  0d572d52-frame777.txt  (+5 more)
datasets/test_train/: config.yaml
datasets/test_train/labels/: train.cache  val.cache
ts341/: pyproject.toml
ts341/hornets/: MOG.py  auto_annotation.py  check_double.py  extraction.py  filter_1.py  main.py  train.py
ts341/runs/detect/train/: args.yaml
ts341/ts341/: MOG.py  auto_annotation.py  extraction.py  filter_1.py  main.py  train.py
(+667 files in other folders)
