[tool.poetry]
name = "hornets"
version = "0.1.0"
description = ""
authors = ["LouisPsn <lpierson002@enseirb-matmeca.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.3.40"
kagglehub = "^0.3.4"
torch = "^2.5.1"
pyrealsense2 = "^2.55.1.6486"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
#commande = 'module.script:fonction'

main = 'hornets.main:main'
train = 'hornets.train:main'
extract = 'hornets.extraction:main'
extract_vid = 'hornets.extraction:main_video'
extract_mp4 = 'hornets.extraction:extract_mp4'
filter_1 = 'hornets.filter_1:vid_inf'